# ros_tutorial

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: follower.launch  keyboard_control.launch  pub_sub.launch  robot_description.launch  secret.launch  world.launch
model/circuit/: model.config  model.sdf
model/square_walls/: model.config  model.sdf
scripts/: color_follower_node.py  keyboard_control_node.py  publisher_node.py  secret_node.py  string_publisher_node.py  string_subscriber_node.py  subscriber_node.py
slides/: Ros_Tutorial.odp  Ros_Tutorial.pptx
src/: cpp_placeholder.txt
urdf/: robot_model.gazebo  robot_model.xacro
worlds/: circuit.world  field.world  trees_apartment.world
